[package]
name = "ammuto-cli"
version = "0.1.0"
edition = "2021"
description = "Allows Ammuto to be used inside the terminal. Mostly used for testing new features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammuto-core = { path = "../ammuto-core", version = "0.1.0" }
crossterm = "0.27.0"
tui = "0.19.0"
